<resources>
    <string name="app_name">LoginDB</string>
    <string name="login_edit_text">Login</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="password">Password</string>
    <string name="user_cover">User cover</string>
    <string name="first_name_detailed">First Name</string>
    <string name="last_name_detailed">Last Name</string>
    <string name="gender_detailed">Gender</string>
    <string name="email_detailed">Email</string>
    <string name="login_detailed">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="add_photo_button">Add Photo</string>
    <string name="save">save</string>
    <string name="login">Login</string>
    <string name="password_register">Password</string>
</resources>