<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="74dp"
    tools:context=".UserPageActivity">

    <TextView
        android:id="@+id/loginDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_detailed"
        android:textColor="#3AAC9F"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/coverImgDetailed"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/user_cover" />

    <TextView
        android:id="@+id/firstNameTextViewDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/first_name_detailed"
        android:textColor="#3AAC9F"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lastNameTextViewDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_detailed"
        android:textColor="#3AAC9F"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/genderTextViewDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_detailed"
        android:textSize="22sp"

        />

    <TextView
        android:id="@+id/emailDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_detailed"
        android:textSize="22sp" />


</LinearLayout>